--- a/.github/workflows/docker-pipeline.yml
+++ b/.github/workflows/docker-pipeline.yml
@@ -13,8 +13,15 @@ jobs:
       - name: Docker Build
         run: docker build -t jooo073/ml-model-22it015 .
 
-      - name: Docker Images
-        run: docker images
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Docker Push
+        run: docker push  jooo073/ml-model-22it015 
+
   
 
        
